--- a/front-end/src/App.css
+++ b/front-end/src/App.css
@@ -20,8 +20,9 @@ header {
   background-color: #333;
   color: white;
   padding: 20px;
-  border-radius: 8px 8px 0 0;
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .logo {
@@ -31,6 +32,25 @@ header {
 .logo a {
   color: white;
   text-decoration: none;
+}
+
+nav ul {
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  margin: 0;
+}
+
+nav a {
+  color: white;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+nav a:hover {
+  background-color: #555;
 }
 
 .dashboard-content {
@@ -163,4 +183,70 @@ textarea {
   padding: 15px;
   margin-bottom: 20px;
   border-radius: 5px;
+}
+
+/* Shared form styles */
+form {
+  margin: 20px;
+  padding: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  max-width: 400px; /* Adjust the width as needed */
+  margin: 20px auto; /* Center the form */
+}
+
+label {
+  margin-bottom: 10px;
+  display: block;
+}
+
+input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+button {
+  background-color: #1c6dc4;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  padding: 8px 14px;
+  margin-right: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+button[type="submit"] {
+  background-color: #389e16;
+}
+
+button[type="submit"]:hover {
+  background-color: #355829;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+/* Styling for success message */
+.success-message {
+  background-color: #3d8325;
+  color: #ffffff;
+  padding: 15px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+}
+
+.error-message {
+  color: red;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
